--- a/src/main/resources/Requests/SeeRequestsAngajat.fxml
+++ b/src/main/resources/Requests/SeeRequestsAngajat.fxml
@@ -1,19 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Requests.SeeRequestsAngajat">
-   <Label layoutX="215.0" layoutY="25.0" text="See Requests" />
-   <Button layoutX="33.0" layoutY="21.0" mnemonicParsing="false" onAction="#Back" text="Back" />
-   <TableView fx:id="TableView" layoutX="26.0" layoutY="58.0" prefHeight="191.0" prefWidth="440.0">
-     <columns>
-       <TableColumn fx:id="name" onEditCommit="#editName" prefWidth="139.0" text="name" />
-       <TableColumn fx:id="number" onEditCommit="#editNumber" prefWidth="152.0" text="number" />
-         <TableColumn fx:id="urgent" onEditCommit="#editUrgent" prefWidth="148.0" text="urgent" />
-     </columns>
-   </TableView>
-   <Button layoutX="215.0" layoutY="261.0" mnemonicParsing="false" onAction="#Delete" text="Delete" />
-   <Button layoutX="83.0" layoutY="261.0" mnemonicParsing="false" onAction="#Add" text="Add" />
-   <Button layoutX="361.0" layoutY="261.0" mnemonicParsing="false" onAction="#Edit" text="Edit" />
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #857891;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Requests.SeeRequestsAngajat">
+    <ImageView fitHeight="400.0" fitWidth="600.0" layoutX="1.0" opacity="0.78" pickOnBounds="true" preserveRatio="true">
+        <Image url="@../images/coffee23.jpg"/>
+    </ImageView>
+    <Label layoutX="175.0" layoutY="11.0" text="See Requests" textFill="#22043c">
+        <font>
+            <Font size="43.0" />
+        </font></Label>
+    <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#Back" opacity="0.85" prefHeight="25.0" prefWidth="63.0" style="-fx-background-color: #576a94;" text="Back" textFill="#fcf9f9">
+        <font>
+            <Font size="13.0" />
+        </font></Button>
+    <TableView fx:id="TableView" layoutX="37.0" layoutY="75.0" opacity="0.85" prefHeight="264.0" prefWidth="527.0" style="-fx-background-color: #c2cadb;">
+        <columns>
+            <TableColumn fx:id="name" onEditCommit="#editName" prefWidth="167.0" text="name" />
+            <TableColumn fx:id="number" onEditCommit="#editNumber" prefWidth="177.0" text="number" />
+            <TableColumn fx:id="urgent" onEditCommit="#editUrgent" prefWidth="182.0" text="urgent" />
+        </columns>
+    </TableView>
+    <Button layoutX="269.0" layoutY="357.0" mnemonicParsing="false" onAction="#Delete" opacity="0.8" prefHeight="25.0" prefWidth="63.0" style="-fx-background-color: #541a1a;" text="Delete" textFill="#fcf8f8">
+        <font>
+            <Font size="13.0" />
+        </font></Button>
+    <Button layoutX="96.0" layoutY="357.0" mnemonicParsing="false" onAction="#Add" opacity="0.76" prefHeight="25.0" prefWidth="63.0" style="-fx-background-color: #576a94;" text="Add" textFill="#f8f5f5">
+        <font>
+            <Font size="13.0" />
+        </font></Button>
+    <Button layoutX="437.0" layoutY="357.0" mnemonicParsing="false" onAction="#Edit" opacity="0.85" prefHeight="25.0" prefWidth="63.0" style="-fx-background-color: #576a94;" text="Edit" textFill="WHITE">
+        <font>
+            <Font size="13.0" />
+        </font></Button>
 </AnchorPane>
