--- a/src/main/resources/Requests/SeeRequestsFurnizor.fxml
+++ b/src/main/resources/Requests/SeeRequestsFurnizor.fxml
@@ -1,17 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Requests.SeeRequestsFurnizor">
-    <Label layoutX="243.0" layoutY="50.0" text="See Requests" />
-   <Button layoutX="27.0" layoutY="24.0" mnemonicParsing="false" onAction="#Back" text="Back" />
-    <TableView fx:id="TableView" layoutX="62.0" layoutY="90.0" prefHeight="214.0" prefWidth="486.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #3b9475;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Requests.SeeRequestsFurnizor">
+    <ImageView fitHeight="439.0" fitWidth="608.0" opacity="0.61" pickOnBounds="true" preserveRatio="true">
+        <Image url="@../images/coffee25.jpg"/>
+    </ImageView>
+    <Label layoutX="152.0" text="See Requests" textFill="WHITE">
+        <font>
+            <Font size="52.0" />
+        </font></Label>
+    <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#Back" opacity="0.87" prefHeight="32.0" prefWidth="82.0" style="-fx-background-color: #ba5d1a;" text="Back" textFill="#ffe4e4">
+        <font>
+            <Font size="13.0" />
+        </font></Button>
+    <TableView fx:id="TableView" layoutX="36.0" layoutY="80.0" opacity="0.85" prefHeight="277.0" prefWidth="527.0" style="-fx-background-color: #eb984f;">
         <columns>
-            <TableColumn fx:id="name" prefWidth="155.19998931884766" text="name" />
-            <TableColumn fx:id="number" prefWidth="162.39999389648438" text="number" />
-            <TableColumn fx:id="urgent" prefWidth="168.4000244140625" text="urgent" />
+            <TableColumn fx:id="name" prefWidth="166.0" text="name" />
+            <TableColumn fx:id="number" prefWidth="170.0" text="number" />
+            <TableColumn fx:id="urgent" prefWidth="190.0" text="urgent" />
         </columns>
     </TableView>
-    <Button layoutX="235.0" layoutY="321.0" mnemonicParsing="false" onAction="#CreateOffer" prefHeight="35.0" prefWidth="110.0" text="Create Offer" />
+    <Button layoutX="245.0" layoutY="364.0" mnemonicParsing="false" onAction="#CreateOffer" opacity="0.84" prefHeight="35.0" prefWidth="110.0" style="-fx-background-color: #ba5d1a;" text="Create Offer" textFill="WHITE">
+        <font>
+            <Font size="13.0" />
+        </font></Button>
 </AnchorPane>
