--- a/src/main/resources/Offers/CreateOffer.fxml
+++ b/src/main/resources/Offers/CreateOffer.fxml
@@ -1,26 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Offers.CreateOffer">
-   <Label layoutX="241.0" layoutY="29.0" prefHeight="36.0" prefWidth="144.0" text="Create Offer" textFill="#b52d2d">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ac80ff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Offers.CreateOffer">
+   <ImageView fitHeight="402.0" fitWidth="288.0" opacity="0.79" pickOnBounds="true" preserveRatio="true">
+      <Image url="@../images/coffee12.jpg"/>
+   </ImageView>
+   <Label layoutX="202.0" layoutY="14.0" prefHeight="50.0" prefWidth="196.0" text="Create Offer" textFill="#fff5e3">
       <font>
-         <Font size="25.0" />
+         <Font size="34.0" />
       </font>
    </Label>
-   <ChoiceBox fx:id="state" layoutX="294.0" layoutY="188.0" prefWidth="150.0" />
-   <TextField fx:id="price" layoutX="294.0" layoutY="149.0" />
-   <TextField fx:id="number" layoutX="294.0" layoutY="110.0" />
-   <TextField fx:id="product" layoutX="294.0" layoutY="74.0" />
-   <Label layoutX="90.0" layoutY="78.0" text="Produs" />
-   <TextField fx:id="numef" layoutX="294.0" layoutY="226.0" />
-   <Label layoutX="83.0" layoutY="114.0" text="Numar bucati" />
-   <Label layoutX="98.0" layoutY="153.0" text="Pret" />
-   <Label layoutX="96.0" layoutY="191.0" text="Stare" />
-   <Button layoutX="225.0" layoutY="285.0" mnemonicParsing="false" onAction="#ok" text="OK" />
-   <Button layoutX="31.0" layoutY="22.0" mnemonicParsing="false" onAction="#Back" text="Back" />
-   <Label layoutX="81.0" layoutY="230.0" text="Nume furnizor" />
-   <Text fx:id="OfferMessage" layoutX="346.0" layoutY="345.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+   <ChoiceBox fx:id="state" layoutX="349.0" layoutY="205.0" prefHeight="25.0" prefWidth="177.0" style="-fx-background-color: #ede1b1;" />
+   <TextField fx:id="price" layoutX="348.0" layoutY="149.0" prefHeight="25.0" prefWidth="177.0" promptText="Pret" style="-fx-background-color: #ede1b1;" />
+   <TextField fx:id="number" layoutX="348.0" layoutY="110.0" prefHeight="25.0" prefWidth="177.0" promptText="Numar bucati" style="-fx-background-color: #ede1b1;" />
+   <TextField fx:id="product" layoutX="348.0" layoutY="74.0" prefHeight="25.0" prefWidth="177.0" promptText="Produs" style="-fx-background-color: #ede1b1;" />
+   <TextField fx:id="numef" layoutX="349.0" layoutY="247.0" prefHeight="29.0" prefWidth="177.0" promptText="Nume furnizor" style="-fx-background-color: #ede1b1;" />
+   <Label layoutX="381.0" layoutY="181.0" text="Starea produsului:" textFill="WHITE">
+      <font>
+         <Font size="14.0" />
+      </font></Label>
+   <Button layoutX="405.0" layoutY="300.0" mnemonicParsing="false" onAction="#ok" opacity="0.78" prefHeight="25.0" prefWidth="63.0" style="-fx-background-color: #29ae67;" text="OK" textFill="#fcf0f0" />
+   <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#Back" opacity="0.89" prefHeight="29.0" prefWidth="63.0" style="-fx-background-color: #a52759;" text="Back" textFill="#f5e5e5">
+      <font>
+         <Font size="13.0" />
+      </font></Button>
+   <Text fx:id="OfferMessage" fill="#fcf6f6" fontSmoothingType="LCD" layoutX="372.0" layoutY="364.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="136.0">
+      <font>
+         <Font size="14.0" />
+      </font></Text>
 </AnchorPane>
